@@ -1,3 +1,21 @@
+// TortoiseSVN - a Windows shell extension for easy version control
+
+// Copyright (C) 2003 - Tim Kemp and Stefan Kueng
+
+// This program is free software; you can redistribute it and/or
+// modify it under the terms of the GNU General Public License
+// as published by the Free Software Foundation; either version 2
+// of the License, or (at your option) any later version.
+
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License
+// along with this program; if not, write to the Free Software
+// Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+//
 #pragma once
 
 
@@ -50,6 +68,7 @@ protected:
 	BOOL m_bMenu21;
 	BOOL m_bMenu22;
 	BOOL m_bMenu23;
+	BOOL m_bMenu24;
 public:
 	afx_msg void OnBnClickedMenu1();
 	afx_msg void OnBnClickedMenu2();
@@ -74,5 +93,6 @@ public:
 	afx_msg void OnBnClickedMenu21();
 	afx_msg void OnBnClickedMenu22();
 	afx_msg void OnBnClickedMenu23();
+	afx_msg void OnBnClickedMenu24();
 	virtual BOOL OnApply();
 };
