@@ -385,6 +385,9 @@
 				RelativePath="..\Icons\menuadd.ico">
 			</File>
 			<File
+				RelativePath="..\Icons\menublame.ico">
+			</File>
+			<File
 				RelativePath="..\Icons\menucheckout.ico">
 			</File>
 			<File
